# vmdio

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README-jp.md  README.md
.github/workflows/: build-cpp-library.yml  build-docs.yml  build_wheels.yml
docs/: Doxyfile  customstyle.css  footer.html  header.html  mainpage.md  technical_architecture.md  technical_architecture_jp.md
samples/cpp/: CMakeLists.txt
samples/cpp/src/: CameraMotionImport.cpp  ModelMotionImport.cpp
samples/python/: camera_motion_import.py  model_motion_import.py
src/cmake/: vmdioConfig.cmake.in
src/pyvmdio/: pyvmdio.cpp
src/pyvmdio/config/: __init__.py.in
src/pyvmdio/submodules/: camera_edit.py  encoding.py  exceptions.py  model_edit.py  vmd_string.py
src/pyvmdio/wheel/: pyproject.toml  setup.py
src/vmdio/: camera_edit.cpp  camera_edit.h  encoding.cpp  exceptions.h  model_edit.cpp  model_edit.h  vmd_encoding.cpp  vmd_encoding.h  vmd_string.cpp  vmd_string.h
src/vmdio/private/: vmd_constants.h  vmd_io_utils.h
tests/ctest/: CMakeLists.txt  test_base.h  test_camera_edit_roundtrip.cpp  test_camera_edit_validation.cpp  test_format_mismatch.cpp  test_model_edit_normalization.cpp  test_model_edit_roundtrip.cpp  test_model_edit_validation.cpp
tests/pytest/: conftest.py  helpers.py  test_camera_edit_roundtrip.py  test_camera_validation.py  test_encoding.py  test_format_mismatch.py  test_model_edit_normalization.py  test_model_edit_roundtrip.py  test_model_edit_string_fields.py  test_model_edit_validation.py  test_pathlike.py  test_vmd_string.py
tests/testdata/models/: model.pmx
tests/testdata/motions/: camera.vmd  light.vmd  motion_morph_visibleik.vmd  selfshadow.vmd
